test/spec_vectors/return_call/fail/module_11.wat
(module (func $f (result i32 i32) unreachable) (func (result i32) return_call $f))